# open-source-polarion-docker-repo-template

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini  zizmor.yml
.config/: container-structure-test.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: actionlint.yml  ci.yml  claude-code-review.yml  pr.yml
tests/: test_app.py
tests/container/: container-structure-test.yaml
