[project]
name = "open-source-polarion-docker-repo-template"
version = "0.0.0"  # the version is controlled by the pipeline
description = ""
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]
# Dependencies moved back to [tool.poetry.dependencies] for Renovate compatibility
# See: https://github.com/renovatebot/renovate/issues/33509
# TODO: Migrate back to [project.dependencies] when Renovate adds Poetry v2 support
# dependencies = [
#   "fastapi==0.115.13",
#   "uvicorn==0.34.3",
#   "requests==2.32.4",
# ]

[tool.poetry]
packages = [{include = "app"}]

# this duplication and legacy format must be kept until Renovate support is added for [project.dependencies] for poetry-lock updates
# for more information check comments above
[tool.poetry.dependencies]
fastapi = "0.129.0"
uvicorn = "0.40.0"
requests = "2.32.5"
# pinning version to avoid security issues
urllib3 = "2.6.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
ruff = "0.15.1"
mypy = "1.19.1"

[tool.poetry.group.test.dependencies]
tox = "4.36.0"
docker = "7.1.0"
pytest = "9.0.2"
pytest-mock = "3.15.1"
pytest-asyncio = "1.3.0"
httpx = "0.28.1"
coverage = "7.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101" # No assert rule (bandit)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
