[project]
name = "open-source-polarion-docker-repo-template"
version = "0.0.0"  # the version is controlled by the pipeline
description = ""
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"

dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "requests==2.33.1",
]

[project.urls]
Homepage = "https://github.com/SchweizerischeBundesbahnen/open-source-polarion-docker-repo-template"
Repository = "https://github.com/SchweizerischeBundesbahnen/open-source-polarion-docker-repo-template"

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.10",
    "mypy==1.20.1",
]

test = [
    "tox==4.53.0",
    "tox-uv==1.35.1",
    # for debug source code for pytest --> see tox.ini section [testenv]
    "docker==7.1.0",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "httpx==0.28.1",
    "coverage==7.13.5",
]

[tool.uv]
# Set to false because this project is an application, not a library
package = false

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
